Påbörjat översikt jaktlag

--- a/Slutuppgift/Web.config
+++ b/Slutuppgift/Web.config
@@ -13,7 +13,7 @@
         <forms loginUrl="login.aspx"></forms>                
       </authentication>
       <authorization>
-        <deny users="?"/>
+        <allow users="?"/>
       </authorization>
     </system.web>
 </configuration>
