--- a/Slutuppgift/Slutuppgift.csproj
+++ b/Slutuppgift/Slutuppgift.csproj
@@ -61,7 +61,9 @@
     <Content Include="Jaktlag.xml" />
     <Content Include="registreradeuppgifter.aspx" />
     <Content Include="style.css" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="start.aspx">
       <BrowseToURL>~/start.aspx</BrowseToURL>
     </Content>
