Lagt till authorization på sidorna
Som besökare kan man nu titta på sidorna start samt jaktlag. För att se
övriga sidor måste man logga in

--- a/Slutuppgift/Web.config
+++ b/Slutuppgift/Web.config
@@ -32,11 +32,30 @@
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5"/>
+    
     <authentication mode="Forms">
       <forms loginUrl="login.aspx"/>
     </authentication>
     <authorization>
-      <allow users="?"/>
+      <deny users="?"/>
     </authorization>
   </system.web>
+
+    <location path="jaktlag.aspx">
+      <system.web>
+        <authorization>
+          <allow users="*"/>
+        </authorization>
+      </system.web>
+    </location>
+
+  <location path="start.aspx">
+    <system.web>
+      <authorization>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+    
+  
 </configuration>
